--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -150,7 +150,7 @@ jobs:
       needs.check_major_change.outputs.is_major_change || !needs.get_last_version.outputs.is_release_candidate
 
   create_release:
-    name: Create release
+    name: Create release candidate
     runs-on: ubuntu-latest
     needs: [add_release_candidate_version, increment_release_candidate_version]
     permissions:
