fix: fixed is published logic

--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Get last version
         id: get_last_version
-        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@hotfix/fixing-major-changes-detection
+        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@main
 
   check_major_change:
     name: Check major change
@@ -68,7 +68,7 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@hotfix/fixing-major-changes-detection
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@main
         with:
           commit_message: ${{ needs.check_major_change.outputs.commit_message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
@@ -86,7 +86,7 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@hotfix/fixing-major-changes-detection
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@main
         with:
           origin_branch: ${{ github.head_ref }}
           head_commit: ${{ github.event.pull_request.head.sha }}
@@ -174,7 +174,7 @@ jobs:
 
       - name: Create release
         id: create_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@hotfix/fixing-major-changes-detection
+        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
