feat: parametrized branch names

--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -2,6 +2,16 @@ name: Pre-release Template
 
 on:
   workflow_call:
+    inputs:
+      main_branch:
+        required: false
+        type: string
+      feature_branches:
+        required: false
+        type: string
+      hotfix_branches:
+        required: false
+        type: string
     outputs:
       version:
         description: The new generated version
@@ -21,7 +31,9 @@ jobs:
 
       - name: Get last version
         id: get_last_version
-        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@main
+        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@v0
+        with:
+          main_branch: ${{ inputs.main_branch }}
 
   check_major_change:
     name: Check major change
@@ -68,10 +80,12 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@main
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@v0
         with:
           commit_message: ${{ needs.check_major_change.outputs.commit_message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
+          feature_branches: ${{ inputs.feature_branches }}
+          hotfix_branches: ${{ inputs.hotfix_branches }}
     if: ${{ needs.check_major_change.outputs.is_major_change == 'true' }}
 
   generate_first_release_candidate_version:
@@ -86,12 +100,14 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@main
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@v0
         with:
           origin_branch: ${{ github.head_ref }}
           head_commit: ${{ github.event.pull_request.head.sha }}
           base_commit: ${{ github.event.pull_request.base.sha }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
+          feature_branches: ${{ inputs.feature_branches }}
+          hotfix_branches: ${{ inputs.hotfix_branches }}
     if: |
       always() && !failure() && !cancelled() &&
       !needs.check_major_change.outputs.is_major_change && !needs.get_last_version.outputs.is_release_candidate
@@ -174,7 +190,7 @@ jobs:
 
       - name: Create release
         id: create_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@main
+        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@v0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
