--- a/actions/release-versioning/action.yml
+++ b/actions/release-versioning/action.yml
@@ -16,6 +16,12 @@ inputs:
   base_commit:
     description: "It is the base commit of the pull request event"
     required: false
+  feature_branches:
+    description: "Allowed feature branch names"
+    required: false
+  hotfix_branches:
+    description: "Allowed hotfix branch names"
+    required: false
 outputs:
   version:
     description: "The new generated version"
@@ -39,6 +45,8 @@ runs:
       env:
         COMMIT_MESSAGE: ${{ inputs.commit_message }}
         ORIGIN_BRANCH: ${{ inputs.origin_branch }}
+        FEATURE_BRANCHES: ${{ inputs.feature_branches }}
+        HOTFIX_BRANCHES: ${{ inputs.hotfix_branches }}
         HEAD_COMMIT: ${{ inputs.head_commit }}
         BASE_COMMIT: ${{ inputs.base_commit }}
         LAST_VERSION: ${{ inputs.last_version }}
