--- a/.github/workflows/create-pre-release.yml
+++ b/.github/workflows/create-pre-release.yml
@@ -9,5 +9,9 @@ jobs:
   create_release_candidate:
     name: Create release candidate
     uses: davidsonbrsilva/versioning-workflow/.github/workflows/create-pre-release-template.yml@v0
+    with:
+      main_branch: "main"
+      feature_branches: "feature"
+      hotfix_branches: "hotfix"
     permissions:
       contents: write
