fix: fixed required parameter

--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       main_branch:
-        required: true
+        required: false
         type: string
       feature_branches:
         required: false
