temp: changed branch references

--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Get last version
         id: get_last_version
-        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@main
+        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@feature/parametrizing-branch-names
         with:
           main_branch: ${{ inputs.main_branch }}
 
@@ -80,7 +80,7 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@main
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@feature/parametrizing-branch-names
         with:
           commit_message: ${{ needs.check_major_change.outputs.commit_message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
@@ -100,7 +100,7 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@main
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@feature/parametrizing-branch-names
         with:
           origin_branch: ${{ github.head_ref }}
           head_commit: ${{ github.event.pull_request.head.sha }}
@@ -190,7 +190,7 @@ jobs:
 
       - name: Create release
         id: create_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@main
+        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@feature/parametrizing-branch-names
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
