--- a/.github/workflows/create-pre-release.yml
+++ b/.github/workflows/create-pre-release.yml
@@ -11,7 +11,7 @@ jobs:
     uses: davidsonbrsilva/versioning-workflow/.github/workflows/create-pre-release-template.yml@feature/parametrizing-branch-names
     with:
       main_branch: "main"
-      feature_branches: "feature"
-      hotfix_branches: "hotfix"
+      feature_branches: "feat"
+      hotfix_branches: "fix"
     permissions:
       contents: write
