fix: fixed branch parameters

--- a/.github/workflows/create-release-template.yml
+++ b/.github/workflows/create-release-template.yml
@@ -6,12 +6,6 @@ on:
       main_branch:
         required: false
         type: string
-      feature_branches:
-        required: false
-        type: string
-      hotfix_branches:
-        required: false
-        type: string
     outputs:
       version:
         description: The new generated version
@@ -31,6 +25,8 @@ jobs:
       - name: Get last version
         id: get_last_version
         uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@feature/parametrizing-branch-names
+        with:
+          main_branch: ${{ inputs.main_branch }}
 
   generate_next_release_version:
     name: Generate next release version
@@ -48,8 +44,6 @@ jobs:
         with:
           commit_message: ${{ github.event.head_commit.message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
-          feature_branches: ${{ inputs.feature_branches }}
-          hotfix_branches: ${{ inputs.hotfix_branches }}
     if: ${{ !needs.get_last_version.outputs.is_release_candidate }}
 
   remove_release_candidate_suffix:
