--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -49,7 +49,7 @@ jobs:
           commit_sha=${{ github.event.pull_request.head.sha }}
           commit_message=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/commits/$commit_sha" \
-            | jq -r '.commit.message')
+            | jq -r '.commit.message' | head -n 1)
           echo "commit_message=$commit_message" >> $GITHUB_OUTPUT
           echo "Last commit message: '$commit_message'"
       - name: Check if new commit is major change
