--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -117,37 +117,8 @@ jobs:
       always() && !failure() && !cancelled() &&
       !needs.check_major_change.outputs.is_major_change && !needs.get_last_version.outputs.is_release_candidate
 
-  increment_release_candidate_version:
-    name: Increment release candidate version
-    runs-on: ubuntu-latest
-    needs: get_last_version
-    outputs:
-      version: ${{ steps.increment_rc_suffix.outputs.version }}
-    steps:
-      - name: Increment release candidate suffix
-        id: increment_rc_suffix
-        run: |
-          regex="([0-9]+)\.([0-9]+)\.([0-9]+)-rc-([0-9]+)"
-
-          if [[ ${{ needs.get_last_version.outputs.last_version }} =~ $regex ]]; then
-            major_version="${BASH_REMATCH[1]}"
-            minor_version="${BASH_REMATCH[2]}"
-            patch_version="${BASH_REMATCH[3]}"
-            rc_version="${BASH_REMATCH[4]}"
-
-            rc_version=$((rc_version + 1))
-            new_tag=${major_version}.${minor_version}.${patch_version}-rc-${rc_version}
-            echo "version=$new_tag" >> $GITHUB_OUTPUT
-            echo "New generated version: $new_tag."
-            exit 0
-          fi
-
-          echo "The version ${{ needs.get_last_version.outputs.last_version }} does not match a valid release candidate version."
-          exit 1
-    if: ${{ needs.get_last_version.outputs.is_release_candidate == 'true' }}
-
-  add_release_candidate_version:
-    name: Add release candidate version
+  add_release_candidate_suffix:
+    name: Add release candidate suffix
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.add_rc_suffix.outputs.version }}
@@ -159,32 +130,21 @@ jobs:
         generate_first_release_candidate_version,
       ]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Add release candidate suffix
         id: add_rc_suffix
-        run: |
-          version=${{ needs.generate_breaking_change_version.outputs.version || needs.generate_first_release_candidate_version.outputs.version }}
-          regex="([0-9]+)\.([0-9]+)\.([0-9]+)-rc-([0-9]+)"
-          rc_version=1
-
-          if [[ "$version" =~ $regex ]]; then
-            version=$(git tag -l "$version*" | sort -V | tail -n 1)
-            if [[ $version =~ $regex ]]; then
-              rc_version="${BASH_REMATCH[4]}"
-              rc_version=$((rc_version + 1))
-            fi
-          fi
-
-          new_tag=$version-rc-${rc_version}
-          echo "version=$new_tag" >> $GITHUB_OUTPUT
-          echo "New generated version: $new_tag."
+        uses: davidsonbrsilva/versioning-workflow/actions/release-candidate-suffix-adding@feature/applying-code-cleanup
+        with:
+          version: ${{ needs.generate_breaking_change_version.outputs.version || needs.generate_first_release_candidate_version.outputs.version || needs.get_last_version.outputs.last_version}}
     if: |
-      always() && !failure() && !cancelled() &&
-      needs.check_major_change.outputs.is_major_change || !needs.get_last_version.outputs.is_release_candidate
+      always() && !failure() && !cancelled()
 
   create_release:
     name: Create release candidate
     runs-on: ubuntu-latest
-    needs: [add_release_candidate_version, increment_release_candidate_version]
+    needs: [add_release_candidate_suffix]
     permissions:
       contents: write
     outputs:
@@ -198,7 +158,7 @@ jobs:
         uses: davidsonbrsilva/versioning-workflow/actions/release-creation@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          version: ${{ needs.add_release_candidate_version.outputs.version || needs.increment_release_candidate_version.outputs.version }}
+          version: ${{ needs.add_release_candidate_suffix.outputs.version }}
           target_commit: ${{ github.event.pull_request.head.sha }}
           pre_release: true
     if: always() && !failure() && !cancelled()
