temp: added logs

--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -168,6 +168,7 @@ jobs:
 
           if [[ "$version" =~ $regex ]]; then
             version=$(git tag -l "$version*" | sort -V | tail -n 1)
+            printf "Last version: %s\n" "$version"
             if [[ $version =~ $regex ]]; then
               rc_version="${BASH_REMATCH[4]}"
               rc_version=$((rc_version + 1))
