--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -169,6 +169,17 @@ jobs:
           regex="([0-9]+)\.([0-9]+)\.([0-9]+)-rc-([0-9]+)"
           rc_version=1
 
+          fail_to_fetch() {
+            printf "Failed to fetch tags from remote.\n"
+            exit 1
+          }
+
+          fetch_tags_from_remote() {
+            git fetch --unshallow origin --tags > /dev/null 2>&1 || fail_to_fetch
+          }
+
+          fetch_tags_from_remote
+
           version=$(git tag -l "$version*" | sort -V | tail -n 1)
           printf "Last version: %s\n" "$version"
           if [[ $version =~ $regex ]]; then
