fix: fixed add suffix step dependency

--- a/.github/workflows/create-pre-release-template.yml
+++ b/.github/workflows/create-pre-release-template.yml
@@ -139,7 +139,7 @@ jobs:
         with:
           version: |
             needs.generate_breaking_change_version.outputs.version || 
-            needs.generate_first_release_candidate_version.outputs.version
+            needs.generate_first_release_candidate_version.outputs.version || 
             needs.get_last_version.outputs.last_version
     if: |
       always() && !failure() && !cancelled()
