--- a/actions/release-creation/action.yml
+++ b/actions/release-creation/action.yml
@@ -13,6 +13,15 @@ inputs:
   pre_release:
     description: "Indicates if the version to be created is a release candidate"
     required: false
+  use_v_prefix:
+    description: "Indicates if the generated version must include a 'v' at start"
+    required: false
+  release_name:
+    description: "For default, release names take the version as own name. This property overrides it"
+    required: false
+  release_name_prefix:
+    description: "Includes a prefix at start of release name"
+    required: false
 outputs:
   version:
     description: "The generated release version"
@@ -38,3 +47,6 @@ runs:
         VERSION: ${{ inputs.version }}
         TARGET_COMMIT: ${{ inputs.target_commit }}
         PRE_RELEASE: ${{ inputs.pre_release }}
+        USE_V_PREFIX: ${{ inputs.use_v_prefix }}
+        RELEASE_NAME: ${{ inputs.release_name }}
+        RELEASE_NAME_PREFIX: ${{ inputs.release_name_prefix }}
