--- a/.github/workflows/create-release-template.yml
+++ b/.github/workflows/create-release-template.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Get last version
         id: get_last_version
-        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@v1
+        uses: davidsonbrsilva/versioning-workflow/actions/latest-version-obtaining@feature/adding-parametrizable-properties
         with:
           main_branch: ${{ inputs.main_branch }}
 
@@ -49,7 +49,7 @@ jobs:
 
       - name: Generate next release version
         id: generate_next_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@v1
+        uses: davidsonbrsilva/versioning-workflow/actions/release-versioning@feature/adding-parametrizable-properties
         with:
           commit_message: ${{ github.event.head_commit.message }}
           last_version: ${{ needs.get_last_version.outputs.last_version }}
@@ -98,7 +98,7 @@ jobs:
 
       - name: Create release
         id: create_release
-        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@v1
+        uses: davidsonbrsilva/versioning-workflow/actions/release-creation@feature/adding-parametrizable-properties
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ needs.generate_next_release_version.outputs.version || needs.remove_release_candidate_suffix.outputs.version }}
